--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="Mishael Enyi" />
+    <meta name="author" content="Chukwuma Uzochukwu Godswill" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Scissor - Your best tool</title>
 
